# webots_smorphi

./: README.md
controllers/smor_cpp/: CMakeLists.txt  smor_cpp  smor_cpp.cpp
controllers/smor_cpp/include/: SlaveMsgHandler.hpp
controllers/smor_cpp/include/msg/: header.hpp
controllers/smor_cpp/src/: SlaveMsgHandler.cpp
controllers/smorphi_slave/: smorphi_slave  smorphi_slave.cpp
controllers/smorphi_slave/include/msg/: solenoid_msg.hpp
controllers/smorphi_slave_2/: CMakeLists.txt  smorphi_slave  smorphi_slave.cpp
controllers/smorphi_slave_2/include/: base.h
controllers/smorphi_slave_2/include/msg/: header.hpp  solenoid_msg.hpp  velocity_msg.hpp
worlds/: .youbot.wbproj  youbot.wbt
